# QuantStrategies_v2

./: .gitignore  Dockerfile  README.md  crontab  pr_create.json  pr_data.json  pyproject.toml
.github/workflows/: ci.yml
config/: tickers.yaml
data/metadata/: data_collection_20250729_192652.json  data_collection_20250729_193250.json
data/raw/: AAPL_2020-07-30_to_today.csv  PLTR_2020-07-30_to_today.csv  TSLA_2020-07-30_to_today.csv
docs/: README.md  api.md  backtesting.md  configuration.md  data.md  development.md  examples.md  installation.md  options.md  overview.md  pde_solvers.md  quick_reference.md  quickstart.md  scripts.md  stochastic_processes.md  strategies.md
notebooks/: marimo_test.py  plot_open_price.py  stochastic_processes_demo.py  testnotebook.py
pde/: __init__.py
pde/solvers/: __init__.py  base.py  black_scholes_cn.py
pde/utils/: __init__.py  grid_utils.py  matrix_utils.py
quant_strategies/data/: __init__.py  data_manager.py  marketstack_client.py  options_client.py  yfinance_client.py
quant_strategies/strategies/: __init__.py  base_strategy.py  bollinger_rsi_strategy.py
scripts/: explore_options.py  fetch_options.py  get_data.py  plot_iv_curve.py  plot_iv_surface.py  run_backtest.py  test_black_scholes_cn.py  test_gbm.py  test_gbm_synthetic.py  test_strategy.py
stochastic/: README.md  __init__.py
stochastic/processes/: __init__.py  (+2 more)
tests/: test_backtest.py  test_data.py  test_data_manager.py  test_execution.py  test_options_client.py  test_pde_solvers.py  test_stochastic_processes.py  test_strategies.py  test_yfinance_client.py
(+12 files in other folders)
